[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "getitdone"
author = "Ryan Butler"
author-email = "ryanleonbutler@gmail.com"
home-page = "https://github.com/ryanleonbutler/getitdone"
    classifiers=[
        'Development Status :: 3 - Alpha',
        'Topic :: Office/Business :: Scheduling',
        'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
    ]
description-file = "README.md"
requires-python = ">=3.7"
