[tool.poetry]
name = "getitdone"
version = "0.0.5"
description = "Command line to-do list application"
authors = ["Ryan Butler <ryanleonbutler@gmail.com>"]
readme = "README.md"
license = "GNU Affero General Public License v3.0"
homepage = "https://github.com/ryanleonbutler/getitdone"
repository = "https://github.com/ryanleonbutler/getitdone"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.32"
rich = "^12.0.1"
textual = "^0.1.17"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
tox = "^3.24.5"
pytest = "^7.1.1"
pylint = "^2.12.2"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gid = 'getitdone.getitdone:main'
getitdone = 'getitdone.getitdone:main'

[tool.tox]
legacy_tox_ini = """
[flake8]
max-line-length = 119
max-complexity = 23

[Tox]
isolated_build = true
skipsdist = true
envlist =
    py{310,39,38},
    flake8,
    tests
[testenv]
deps =
    poetry>=1.1.0
whitelist_external = poetry
skip_install = true
commands_pre = poetry install -vvv
[testenv:flake8]
commands =
    poetry run flake8 src/getitdone tests/
[testenv:tests]
commands =
    poetry run pytest -ra -v --cov=tests --cov-report=xml
    poetry run coverage report -m
    poetry run coverage html -i
"""

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
combine_as_imports = true
include_trailing_comma = true

[tool.pytest.ini_options]
python_paths = "src/getitdone"

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
